[package]
name = "counting-networks"
edition = "2018"
version = "0.1.3" # remember to update html_root_url
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
description = "Lock-free data structures for concurrent counting"
repository = "https://github.com/declanvk/counting-networks"
categories = ["concurrency", "data-structures"]
keywords = ["concurrency", "data-structures", "lock-free", "counting-network"]
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]

[dev-dependencies]
loom = { version = "0.3", features = ["checkpoint"] }
num_cpus = "1.12"
